--- a/rom_duplicate_manager.ini
+++ b/rom_duplicate_manager.ini
@@ -1,9 +1,12 @@
 [Settings]
 dark_mode = True
 row_colors = True
-language = English-EU
+language = English-US
 smart_select = True
 scan_images = True
 match_size = False
 permanent_delete = True
+use_regex = False
+file_type = Archive
+search_in_path = False
 
