Scan images now has a dual-function, and will exclude imgage files from wildcard results, if unchecked. Numerical catalogue prefixes excluded from ROM scans in wildcard mode, to better match filenames.

--- a/rom_duplicate_manager.ini
+++ b/rom_duplicate_manager.ini
@@ -3,10 +3,10 @@ dark_mode = True
 row_colors = True
 language = English-US
 smart_select = True
-scan_images = True
+scan_images = False
 match_size = False
-permanent_delete = True
+permanent_delete = False
 use_regex = False
-file_type = Archive
+file_type = Wildcard *.*
 search_in_path = False
 
