Refactor: Moved most classes to individual mixins. Filename/Path sorting now correctly retains delete/keep at the top. Added theme support, to replace dark/light Changed layout of buttons to a more modern style. All functions haver docstrings Improved erorr messages Stat display now at the top of the window, in new frame.

--- a/rom_duplicate_manager.ini
+++ b/rom_duplicate_manager.ini
@@ -7,6 +7,7 @@ scan_images = False
 match_size = False
 permanent_delete = False
 use_regex = False
-file_type = Wildcard *.*
+file_type = All Files
 search_in_path = False
+theme = darkly
 
